# AudioSplitX

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
src/: AudioEngine.cpp  AudioEngine.h  AudioFormat.cpp  AudioFormat.h  AudioSampleConvert.cpp  AudioSampleConvert.h  Common.cpp  Common.h  DeviceEnumerator.cpp  DeviceEnumerator.h  GuiApp.cpp  Mmcss.cpp  Mmcss.h  Resampler.cpp  Resampler.h  SpscRingBuffer.h  SyncManager.cpp  SyncManager.h  WasapiCapture.cpp  WasapiCapture.h  WasapiRenderer.cpp  WasapiRenderer.h  audiosplitx-ui.rc  main.cpp
tools/: build-software.ps1
